--- a/vagrant-vms/IAAC/website/Vagrantfile
+++ b/vagrant-vms/IAAC/website/Vagrantfile
@@ -32,12 +32,12 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+   config.vm.network "private_network", ip: "192.168.56.20"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-   config.vm.network "public_network"
+  config.vm.network "public_network"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -64,9 +64,13 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
-     yum install httpd wget unzip -y
-     mkdir /opt/devopsdir
-     free -m
-     uptime
-   SHELL
+     yum install httpdwget unzip -y
+     systemctl start httpd
+     systemctl enable httpd
+     cd /tmp/
+     wget https://www.tooplate.com/zip-templates/2102_constructive.zip
+     unzip -o 2102_constructive.zip
+     cp -r unzip 2102_constructive/* /var/www/html/
+     systemctl restart httpd
+  SHELL
 end
